--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,9 @@ html
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js')
     
-  body!= body
+  body
+    - if (typeof currentUser !== 'undefined')
+      p
+        a(href='/sessions', class='destroy') Log Out
+    != body
     script(type='text/javascript', src='/javascripts/application.js')
