--- a/views/documents/new.jade
+++ b/views/documents/new.jade
@@ -1,3 +1,6 @@
-h2 New Document
-form(method='post', action='/documents')
-  !=partial('documents/fields', { localhost: { d: d } })
+.page
+  h2 New Document
+  p
+    a.button(href='/documents') &larr; All Documents
+  form(method='post', action='/documents')
+    !=partial('documents/fields', { localhost: { d: d } })
