customizing error handler

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -179,3 +179,15 @@ ul.toolbar a {
   font-size: 13px;
   width: 44px
 }
+
+.page {
+  padding: 10px;
+}
+
+.page h2 {
+  margin-bottom: 10px;
+}
+
+.page p {
+  margin: 10px 0;
+}
